@@ -17,7 +17,7 @@
  * @category  phpMyFAQ
  * @package   Administration
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
- * @copyright 2003-2011 phpMyFAQ Team
+ * @copyright 2003-2012 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
  * @link      http://www.phpmyfaq.de
  * @since     2003-02-23
@@ -243,7 +243,7 @@ if ($permission["editbt"] && !PMF_Db::checkOnEmptyTable('faqcategories')) {
         $faqData['lang'] = PMF_Filter::filterInput(INPUT_GET, 'lang', FILTER_SANITIZE_STRING);
     }
 
-    if ($permission["addatt"]) {
+    if ($permission['addattachment']) {
 ?>
                 <p>
                     <label><?php print $PMF_LANG['ad_menu_attachments'] ?>:</label>
@@ -257,7 +257,7 @@ if ($permission["editbt"] && !PMF_Db::checkOnEmptyTable('faqcategories')) {
                 printf('<li><a href="../%s">%s</a> ',
                     $att->buildUrl(),
                     $att->getFilename());
-                if ($permission['delatt']) {
+                if ($permission['delattachment']) {
                     printf('[ <a href="?action=delatt&amp;record_id=%d&amp;id=%d&amp;lang=%s">%s</a> ]',
                         $faqData['id'],
                         $att->getId(),
